feat: add service worker script

--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,9 @@
     "default_popup": "index.html",
     "default_title": "Generate blog post"
   },
+  "background": {
+    "service_worker": "scripts/contextMenuServiceWorker.js"
+  },
   "permissions": [
     "contextMenus",
     "tabs",
