feat: inject output into webpage

--- a/manifest.json
+++ b/manifest.json
@@ -20,5 +20,16 @@
     "contextMenus",
     "tabs",
     "storage"
+  ],
+  "content_scripts": [
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "scripts/content.js"
+      ]
+    }
   ]
 }
